# netmon

./: Cargo.toml  README.md  build.sh  grafana-dashboard.json
src/: collector.rs  logger.rs  main.rs  prometheus.rs  tui.rs  types.rs
