[package]
name = "netmon"
version = "0.2.0"
edition = "2021"
description = "Network traffic monitor: TUI, continuous log, and Prometheus exporter"
authors = ["netmon"]
license = "MIT"

[[bin]]
name = "netmon"
path = "src/main.rs"

[dependencies]
ratatui    = "0.28"
crossterm  = "0.28"
procfs     = "0.16"
sysinfo    = "0.31"
chrono     = { version = "0.4", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
libc       = "0.2"

[profile.release]
opt-level = 3
strip     = true
lto       = true
